# Fluxsim

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.client  Dockerfile.desktop  Dockerfile.dns  LICENSE  Makefile  README.md  README.rst  docker-entrypoint.sh  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
active-probe/: Dockerfile  probe.py  requirements.txt
dns_config/: named.conf  named.conf.local  named.conf.options
docs/source/: api.rst  cli.rst  conf.py  index.rst  overview.rst  workflows.rst
examples/: FluxLabDashboard.py
examples/notebooks/: FluxLabStarter.ipynb
fluxsim/: __init__.py  cli.py  commands.py  compose_gen.py  config.py  deploy.py  dns_utils.py  docker_utils.py  state.py
html/: index.html
ingestor/: consumer.py  requirements.txt
monitoring/: prometheus.yml
monitoring/exporter/: Dockerfile  app.py
monitoring/grafana/: grafana.db
monitoring/grafana/dashboards/: fluxlab.json
nginx_configs/: cdn_edge.conf  load_balancer.conf  origin.conf  proxy.conf
passive-agent/: Dockerfile  agent.py
scripts/: dns_updater.sh  start_client.sh
tests/: test_dns_utils.py  test_docker_utils.py  test_import.py  test_state_registry.py
